@@ -626,3 +626,4 @@ OPENSSL_INIT_ATFORK
 OPENSSL_INIT_NO_ATEXIT
 TLSEXT_NAMETYPE_host_name
 EVP_MAX_MD_SIZE
+SSL_MODE_SEND_FALLBACK_SCSV
